--- a/lab1/profile.html
+++ b/lab1/profile.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мій профіль</title>
+    <title>CyberArena</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/profile.css">
 </head>
 <body>
-    <header><h1>Мій профіль</h1></header>
+    <header><h1>CyberArena</h1></header>
     <nav>
         <a href="index.html">Головна</a>
         <a href="games.html">Ігри</a>
