--- a/lab1/index.html
+++ b/lab1/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Організація онлайн-ігор</title>
+    <title>CyberArena</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Організація онлайн-ігор</h1>
+        <h1>CyberArena</h1>
     </header>
     <nav>
         <a href="index.html">Головна</a>
