git branch -M main

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Організація онлайн-ігор</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script defer src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -21,8 +22,7 @@
             <h2>Ласкаво просимо до світу онлайн-ігор!</h2>
             <p>Наш сайт пропонує широкий вибір онлайн-ігор різних жанрів. Ви можете брати участь у турнірах, стежити за своїми досягненнями та покращувати свій рівень гри.</p>
             <p>Приєднуйтесь до тисяч гравців по всьому світу та змагайтеся за звання найкращого!</p>
-            <!-- <p>Грайте в найкращі ігри, беріть участь у турнірах і відстежуйте свої досягнення.</p> -->
-            <a href="games.html" class="btn">Переглянути ігри</a>
+            <a href="games.html" class="btn">Дослідити найкращі ігри</a>
         </section>
         <section class="features">
             <div class="feature"><h3>🔥 Популярні ігри</h3><p>Обирайте з сотень ігор різних жанрів.</p></div>
@@ -49,6 +49,5 @@
             </div>
         </div>
     </footer>
-        
 </body>
 </html>
