--- a/lab1/index.html
+++ b/lab1/index.html
@@ -19,15 +19,23 @@
     <main class="container">
         <section class="hero">
             <h2>Ласкаво просимо до світу онлайн-ігор!</h2>
-            <p>Наш сайт пропонує широкий вибір онлайн-ігор різних жанрів. Ви можете брати участь у турнірах, стежити за своїми досягненнями та покращувати свій рівень гри.</p>
-            <p>Приєднуйтесь до тисяч гравців по всьому світу та змагайтеся за звання найкращого!</p>
-            <!-- <p>Грайте в найкращі ігри, беріть участь у турнірах і відстежуйте свої досягнення.</p> -->
+            <p>Наш сайт пропонує широкий вибір онлайн-ігор різних жанрів. Ви можете брати участь у турнірах, стежити за своїми досягненнями та покращувати свій рівень гри. Насолоджуйтесь захоплюючими пригодами, командними битвами та головоломками, які розвивають логіку і реакцію.</p>
+            <p>Приєднуйтесь до тисяч гравців по всьому світу та змагайтеся за звання найкращого! Грайте у своє задоволення або будуйте професійну кар’єру кіберспортсмена — можливості безмежні!</p>
             <a href="games.html" class="btn">Переглянути ігри</a>
         </section>
         <section class="features">
-            <div class="feature"><h3>🔥 Популярні ігри</h3><p>Обирайте з сотень ігор різних жанрів.</p></div>
-            <div class="feature"><h3>🏆 Турніри</h3><p>Змагайтеся та вигравайте призи!</p></div>
-            <div class="feature"><h3>🎖 Ваші досягнення</h3><p>Відстежуйте свої перемоги та нагороди.</p></div>
+            <div class="feature">
+                <h3>🔥 Популярні ігри</h3>
+                <p>Обирайте з сотень ігор різних жанрів. Від аркад до стратегій — кожен знайде щось до душі. Наш каталог постійно оновлюється з урахуванням трендів і побажань гравців.</p>
+            </div>
+            <div class="feature">
+                <h3>🏆 Турніри</h3>
+                <p>Змагайтеся та вигравайте призи! Реєструйтеся на регулярні події, боріться з найсильнішими суперниками та прославляйте своє ім’я в залі слави.</p>
+            </div>
+            <div class="feature">
+                <h3>🎖 Ваші досягнення</h3>
+                <p>Відстежуйте свої перемоги та нагороди. Збирайте значки, відкривайте нові рівні та діліться своїми успіхами з друзями в соціальних мережах.</p>
+            </div>
         </section>
     </main>
     <footer>
@@ -38,14 +46,14 @@
                 <p>📞 Телефон: +380 44 123 45 67</p>
             </div>
             <div class="footer-block">
-                <h3>Адреса</h3>
-                <p>📍 Київ, вул. Геймерська, 12</p>
-            </div>
-            <div class="footer-block">
                 <h3>Соцмережі</h3>
                 <p>📘Facebook: @gamesite_fb</p>
                 <p>🐦Twitter: @gamesite_tw</p>
                 <p>📸Instagram: @gamesite_ig</p>
+            </div>
+            <div class="footer-block">
+                <h3>Адреса</h3>
+                <p>📍 Київ, вул. Геймерська, 12</p>
             </div>
         </div>
     </footer>
