--- a/lab2/games.html
+++ b/lab2/games.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ігри</title>
+    <title>CyberArena</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/games.css">
-    <script defer src="js/script.js"></script>
 </head>
 <body>
-    <header><h1>Ігри</h1></header>
+    <header><h1>CyberArena</h1></header>
     <nav>
         <a href="index.html">Головна</a>
         <a href="games.html">Ігри</a>
@@ -17,8 +16,6 @@
         <a href="profile.html">Мій профіль</a>
     </nav>
     <main class="container">
-        <h2>Рекомендовані ігри</h2>
-        <div id="recommended-games" class="games-grid"></div>
         <h2>Список доступних ігор</h2>
         <p>Ми пропонуємо великий вибір ігор різних жанрів. Від стратегій до шутерів, кожен знайде щось для себе.</p>
         <p>Обирайте улюблені ігри та поринайте у світ змагань та перемог!</p>
@@ -29,7 +26,7 @@
                 <p>Жанр: Стратегія</p>
                 <p>Рейтинг: ⭐⭐⭐⭐☆</p>
                 <p>Гравців: 1200</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
             </div>
             <div class="game-card">
                 <img src="images/game2.png" alt="Doom Ethernal">
@@ -37,7 +34,7 @@
                 <p>Жанр: Шутер</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
             </div>
             <div class="game-card">
                 <img src="images/game3.png" alt="Elden Ring">
@@ -45,7 +42,7 @@
                 <p>Жанр: RPG</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
             </div>
             <div class="game-card">
                 <img src="images/game4.png" alt="EA FC 25">
@@ -53,7 +50,7 @@
                 <p>Жанр: Симулятор</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
             </div>
             <div class="game-card">
                 <img src="images/game5.png" alt="Mortal Combat X">
@@ -61,7 +58,7 @@
                 <p>Жанр: Файтинг</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
             </div>
             <div class="game-card">
                 <img src="images/game6.png" alt="Resident Evil Village">
@@ -69,7 +66,7 @@
                 <p>Жанр: Жахи</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
             </div>
             <div class="game-card">
                 <img src="images/game7.png" alt="Call of Duty: Modern Warfare 3">
@@ -77,7 +74,7 @@
                 <p>Жанр: Шутер</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
             </div>
             <div class="game-card">
                 <img src="images/game8.png" alt="Crysis">
@@ -85,7 +82,7 @@
                 <p>Жанр: Шутер</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="fav-btn">Додати до улюблених</button>
+                <button class="play-btn">Грати</button>
         </div>
     </main>
     <footer>
