--- a/lab2/games.html
+++ b/lab2/games.html
@@ -16,6 +16,9 @@
         <a href="profile.html">Мій профіль</a>
     </nav>
     <main class="container">
+        <h2>🎮 Рекомендовані ігри</h2>
+        <div class="games-container"></div>
+
         <h2>Список доступних ігор</h2>
         <p>Ми пропонуємо великий вибір ігор різних жанрів. Від стратегій до шутерів, кожен знайде щось для себе.</p>
         <p>Обирайте улюблені ігри та поринайте у світ змагань та перемог!</p>
@@ -104,5 +107,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
