--- a/lab2/games.html
+++ b/lab2/games.html
@@ -29,7 +29,7 @@
                 <p>Жанр: Стратегія</p>
                 <p>Рейтинг: ⭐⭐⭐⭐☆</p>
                 <p>Гравців: 1200</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
             </div>
             <div class="game-card">
                 <img src="images/game2.png" alt="Doom Ethernal">
@@ -37,7 +37,7 @@
                 <p>Жанр: Шутер</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
             </div>
             <div class="game-card">
                 <img src="images/game3.png" alt="Elden Ring">
@@ -45,7 +45,7 @@
                 <p>Жанр: RPG</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
             </div>
             <div class="game-card">
                 <img src="images/game4.png" alt="EA FC 25">
@@ -53,7 +53,7 @@
                 <p>Жанр: Симулятор</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
             </div>
             <div class="game-card">
                 <img src="images/game5.png" alt="Mortal Combat X">
@@ -61,7 +61,7 @@
                 <p>Жанр: Файтинг</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
             </div>
             <div class="game-card">
                 <img src="images/game6.png" alt="Resident Evil Village">
@@ -69,15 +69,15 @@
                 <p>Жанр: Жахи</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
             </div>
             <div class="game-card">
                 <img src="images/game7.png" alt="Call of Duty: Modern Warfare 3">
-                <h3>Call of Duty: Modern Warfare 3</h3>
+                <h3>Call of Duty: MW 3</h3>
                 <p>Жанр: Шутер</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
             </div>
             <div class="game-card">
                 <img src="images/game8.png" alt="Crysis">
@@ -85,7 +85,7 @@
                 <p>Жанр: Шутер</p>
                 <p>Рейтинг: ⭐⭐⭐⭐⭐</p>
                 <p>Гравців: 950</p>
-                <button class="play-btn">Грати</button>
+                 <button class="fav-btn">Додати до улюблених</button>
         </div>
     </main>
     <footer>
@@ -107,6 +107,7 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/script3.js"></script>
 </body>
 </html>
