--- a/lab2/profile.html
+++ b/lab2/profile.html
@@ -23,6 +23,14 @@
             <p>🌟 Ранг: Легенда</p>
         </section>
         
+        <div class="profile-progress">
+            <h2>Прогрес до наступної нагороди</h2>
+            <div class="progress-container">
+                <div id="progress-bar">0%</div>
+            </div>
+        </div>
+       
+
         <section class="profile-info">
             <div class="info-card">
                 <h3>Статистика</h3>
@@ -61,5 +69,6 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/script2.js"></script>
 </body>
 </html>
