--- a/lab2/games.html
+++ b/lab2/games.html
@@ -107,7 +107,7 @@
             </div>
         </div>
     </footer>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/script3.js"></script>
+    <script src="scripts/favouritegames.js"></script>
+    <script src="scripts/games.js"></script>
 </body>
 </html>
