--- a/lab2/profile.html
+++ b/lab2/profile.html
@@ -49,6 +49,17 @@
                     </ul>
             </div>
         </section>
+        <section class="comments-section">
+            <h2>Коментарі інших гравців</h2>
+        
+            <form id="comment-form">
+                <input type="text" id="username" placeholder="Ваше ім’я (гравець)" required>
+                <textarea id="usercomment" placeholder="Залиште свій коментар про цього гравця" required></textarea>
+                <button type="submit">Додати коментар</button>
+            </form>
+        
+            <div id="comments-list"></div>
+        </section>
     </main>
     <footer>
         <div class="footer-container">
@@ -69,6 +80,7 @@
             </div>
         </div>
     </footer>
-    <script src="scripts/script2.js"></script>
+    <script src="scripts/progressbar.js"></script>
+    <script src="scripts/commets.js"></script>
 </body>
 </html>
